Fix file-drop & overflow

--- a/frontend/src/components/Upload.css
+++ b/frontend/src/components/Upload.css
@@ -2,9 +2,14 @@
   z-index: -2;
   position: absolute;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-image: url("../assets/bg.svg");
   background-size: cover;
+}
+
+.upload-container {
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
 }
 
 .upload-icon-container {
@@ -24,52 +29,54 @@
   cursor: pointer
 }
 
+.instruction {
+  color: white;
+  font-size: 32px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
 .upload-button-container {
   text-align: center;
   margin-top: 8%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 8%;
 }
 
 .upload-button {
   border: none;
   border-radius: 16px;
   padding: 12px 36px 12px;
-  opacity: 1.0;
+  opacity: 0.9;
   transition: 0.3s;
-  background-color: #ed2222;
-  color: #ffe8e8;
+  background-color: white;
+  color: #ed2222;
   font-size: 22px;
 }
+    .upload-button:hover, .upload-button:focus {
+        background-color: #ffffff;
+        box-shadow: 1px 2px 20px 8px rgba(255,255,255, 0.3);
+    		transition: 0.3s;
+    }
 
-.upload-button:hover, .upload-button:focus {
-    background-color: #ffffff;
-    opacity: 0.8;
-    box-shadow: 1px 2px 20px 8px rgba(0, 0, 0, 0.1);
-    color: #ed2222;
-		transition: 0.3s;
-}
 
 .dropzone-container {
   margin-top: 2%;
   border-radius: 24px;
-  display: block;
   background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-  height: 200px;
+  opacity: 0.9;
   border-color: rgba(0, 0, 0, 0.1);
   transition: 0.4s;
-  box-shadow: 1px 2px 40px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 2px 20px 8px rgba(255,255,255, 0.0);
 }
+    .dropzone-container:hover {
+      cursor: pointer;
+      border-color: rgba(0, 0, 0, 0.1);
+      box-shadow: 1px 2px 30px 8px rgba(255,255,255, 0.3);
+    }
 
-.dropzone-container:hover {
-  cursor: pointer;
-  border-color: rgba(0, 0, 0, 0.1);
-  box-shadow: 1px 2px 50px 20px rgba(0, 0, 0, 0.2);
-}
 
 #filename {
   text-align: center;
